syntax = "proto3";
package VrLifeAPI.Common.Applications.DefaultApps.FriendsApp.NetworkingModels;

import "FriendsAppUserMsg.proto";
message FriendsAppRequestsMsg
{
	uint64 toUser = 1;
	repeated FriendsAppUserMsg friendRequestsList = 2;
}